// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/common/Panel Panel Snapshots should render a panel with header 1`] = `
<div
  className="lst-panel"
>
  <div
    className="lst-panel__container lst-panel--no-padding lst-panel--border"
  >
    <div
      className="row lst-panel__header lst-truncate"
    >
      <div
        className="col-xs-6"
      >
        <h2
          className="fit-to-div"
        >
          
          test title
        </h2>
      </div>
      <div
        className="col-xs-6 end-xs"
      />
    </div>
    Just a panel!
  </div>
</div>
`;

exports[`components/common/Panel Panel Snapshots should render a panel with no padding 1`] = `
<div
  className="lst-panel"
>
  <div
    className="lst-panel__container lst-panel--no-padding lst-panel--border"
  >
    Just a panel!
  </div>
</div>
`;

exports[`components/common/Panel Panel Snapshots should render a panel with padding 1`] = `
<div
  className="lst-panel"
>
  <div
    className="lst-panel__container lst-panel--padding lst-panel--border"
  >
    Just a panel!
  </div>
</div>
`;
